# text_to_speech

./: .gitignore  LICENCE.txt  LICENSE  README.md  pyproject.toml
app/: app.py  main.py  requirements.txt
app/speech_technology/repository/: tts.py
app/speech_technology/router/: home.py  tts.py
app/text_to_speech/: database.py  models.py
app/text_to_speech/repository/: tts.py
app/text_to_speech/router/: home.py  tts.py
app/tts/: schemas.py
app/tts/repository/: common.py  tts.py
app/tts/router/: home.py  tts.py
tts-env/: pyvenv.cfg
tts/router/: tts.py
